# Algorithmic-competition-entry-classic

./: .gitignore  CMakeLists.txt
ch3/UVa10082/: UVa10082.cpp
ch3/UVa1583/: UVa1583
ch3/UVa1584/: UVa1584
ch3/UVa272/: UVa272.cpp
ch3/UVa340/: UVa340
ch3/UVa401/: UVa401.cpp
ch3/examples/UVa1583/: UVa1583.cpp
ch3/examples/UVa1584/: UVa1584.cpp
ch3/examples/UVa272/: UVa272
ch3/examples/UVa340/: UVa340.cpp
ch3/exercises/: .gitignore
ch3/exercises/UVa10340/: UVa10340.cpp
ch3/exercises/UVa11809/: UVa11809.cpp
ch3/exercises/UVa1225/: UVa1225.cpp
ch3/exercises/UVa1368/: UVa1368.cpp
ch3/exercises/UVa1585/: UVa1585.cpp
ch3/exercises/UVa1586/: UVa1586.cpp
ch3/exercises/UVa1587/: UVa1587.cpp
ch3/exercises/UVa1588/: UVa1588.cpp
ch3/exercises/UVa202/: UVa202.cpp
ch3/exercises/UVa227/: UVa227.cpp  UVa227key.cpp
ch3/exercises/UVa232/: UVa232.cpp
ch3/exercises/UVa455/: UVa455.cpp
ch4/examples/UVa12412/: UVa12412.cpp
ch4/examples/UVa133/: UVa133.cpp
ch4/examples/UVa1339/: UVa1339.cpp
ch4/examples/UVa213/: UVa213.cpp
ch4/examples/UVa489/: UVa489.cpp
ch4/examples/UVa512/: UVa512.cpp  UVa512b.cpp
ch4/exercises/UVa1589/: UVa1589.cpp
