cmake_minimum_required(VERSION 3.20)
project(Algorithmic_competition_entry_classic)

set(CMAKE_CXX_STANDARD 14)

add_executable(UVa232 ch3/exercises/UVa232/UVa232.cpp)
add_executable(UVa1368 ch3/exercises/UVa1368/UVa1368.cpp)
add_executable(UVa202 ch3/exercises/UVa202/UVa202.cpp)
add_executable(UVa10340 ch3/exercises/UVa10340/UVa10340.cpp)
add_executable(UVa1587 ch3/exercises/UVa1587/UVa1587.cpp)
