cmake_minimum_required(VERSION 3.20)
project(Algorithmic_competition_entry_classic)

set(CMAKE_CXX_STANDARD 14)

add_executable(UVa232 ch3/exercises/UVa232/UVa232.cpp)
add_executable(UVa1368 ch3/exercises/UVa1368/UVa1368.cpp)
add_executable(UVa202 ch3/exercises/UVa202/UVa202.cpp)
add_executable(UVa10340 ch3/exercises/UVa10340/UVa10340.cpp)
add_executable(UVa1587 ch3/exercises/UVa1587/UVa1587.cpp)
add_executable(UVa1588 ch3/exercises/UVa1588/UVa1588.cpp)
add_executable(UVa11809 ch3/exercises/UVa11809/UVa11809.cpp)
add_executable(UVa1339 ch4/examples/UVa1339/UVa1339.cpp)
add_executable(UVa489 ch4/examples/UVa489/UVa489.cpp)
add_executable(UVa133 ch4/examples/UVa133/UVa133.cpp)
add_executable(UVa213 ch4/examples/UVa213/UVa213.cpp)
add_executable(UVa512 ch4/examples/UVa512/UVa512.cpp)
add_executable(UVa512b ch4/examples/UVa512/UVa512b.cpp)
add_executable(UVa12412 ch4/examples/UVa12412/UVa12412.cpp)
add_executable(UVa1589 ch4/exercises/UVa1589/Uva1589.cpp)
